# saxo-grab

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  background.js  content.js  interceptor.js  manifest.json  popup.css  popup.html  popup.js
chrome/: content.js  interceptor.js  manifest.json  popup.css  popup.html  popup.js
receiver/: Cargo.toml
receiver/src/: main.rs
